--- a/Purchasing.Mvc/Views/Order/_ReviewApprovals.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewApprovals.cshtml
@@ -5,7 +5,7 @@
 
 @if (!Model.Complete)
 {
-    var personLookupUrl = configuration.GetValue<string>("PersonLookupUrl");
+    var personLookupUrl = configuration["PersonLookupUrl"];
       
     <section id="approvals" class="ui-corner-all display-form">
 
