--- a/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
+++ b/Purchasing.Mvc/Views/DepartmentalAdminRequest/Approve.cshtml
@@ -79,7 +79,7 @@
                         <div class="display-details">
                                      
                             @{
-                    var url = string.Format("{0}{1}", configuration.GetValue<string>("PersonLookupUrl"), email.Value);
+                    var url = string.Format("{0}{1}", configuration["PersonLookupUrl"], email.Value);
                                 var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
@@ -117,7 +117,7 @@
                         <div class="display-details">
                                      
                             @{
-                    var url = string.Format("{0}{1}", configuration.GetValue<string>("PersonLookupUrl"), email.Value);
+                    var url = string.Format("{0}{1}", configuration["PersonLookupUrl"], email.Value);
                     var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
@@ -154,7 +154,7 @@
                         <div class="display-details">
                                      
                             @{
-                    var url = string.Format("{0}{1}", configuration.GetValue<string>("PersonLookupUrl"), email.Value);
+                    var url = string.Format("{0}{1}", configuration["PersonLookupUrl"], email.Value);
                     var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
