--- a/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
@@ -35,7 +35,8 @@
       <script src="~/bundles/head.min.js"></script>
     </environment>
     <environment names="Development">
-      <script src="~/Scripts/public/head/*.js"></script>
+      <script src="~/Scripts/public/head/modernizr.custom.js"></script>
+      <script src="~/Scripts/public/head/prefixfree.js"></script>
     </environment>
     break;
 
@@ -44,7 +45,13 @@
       <script src="~/bundles/common.min.js"></script>
     </environment>
     <environment names="Development">
-      <script src="~/Scripts/public/common/*.js"></script>
+      <script src="~/Scripts/public/common/browserdetect.js"></script>
+      <script src="~/Scripts/public/common/jquery.dataTables.js"></script>
+      <script src="~/Scripts/public/common/jquery.qtip.js"></script>
+      <script src="~/Scripts/public/common/jquery.tzCheckbox.js"></script>
+      <script src="~/Scripts/public/common/jquery.validate.js"></script>
+      <script src="~/Scripts/public/common/jquery.validate.unobtrusive.js"></script>
+      <script src="~/Scripts/public/common/startup.js"></script>      
     </environment>
     break;
 
@@ -53,7 +60,16 @@
       <script src="~/bundles/order.min.js"></script>
     </environment>
     <environment names="Development">
-      <script src="~/Scripts/public/order/*.js"></script>
+      <script src="~/Scripts/public/order/chosen.jquery.js"></script>
+      <script src="~/Scripts/public/order/fileuploader.js"></script>
+      <script src="~/Scripts/public/order/jquery.stickyfloat.js"></script>
+      <script src="~/Scripts/public/order/jquery.tmpl.js"></script>
+      <script src="~/Scripts/public/order/jquery.unserializeform.js"></script>
+      <script src="~/Scripts/public/order/knockout-2.0.0.0.js"></script>
+      <script src="~/Scripts/public/order/Order.js"></script>
+      <script src="~/Scripts/public/order/OrderEdit.js"></script>
+      <script src="~/Scripts/public/order/OrderLocalStorage.js"></script>
+      <script src="~/Scripts/public/order/SausageCustom.js"></script>
     </environment>
     break;
 
