--- a/Purchasing.Mvc/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
@@ -48,7 +48,7 @@
                         <div class="display-details">
                                      
                             @{
-                    var url = string.Format("{0}{1}", configuration.GetValue<string>("PersonLookupUrl"), email.Value);
+                    var url = string.Format("{0}{1}", configuration["PersonLookupUrl"], email.Value);
                                 var emailString = string.Format("mailto:{0}", email.Value);
                             }
                             <a class="button" href="@url" target="_blank">Lookup</a>
