--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -30,11 +30,13 @@
     @await Html.PartialAsync("_JsBundle", "~/bundles/jqueryui")
     @await Html.PartialAsync("_JsBundle", "~/bundles/head")
 
+@{ #pragma warning disable CS0162 } 
 	@if (false)
  { //Load the jquery docs for intellisense
 	<script src="../../Scripts/jquery-1.7.1-vsdoc.js" type="text/javascript"></script>
  }
-    
+@{ #pragma warning restore CS0162 } 
+
 </head>
 <body>
     @{
