Remove unused project references

--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.Azure
-@using Purchasing.Mvc.Helpers
+﻿@using Purchasing.Mvc.Helpers
 @model ReviewOrderViewModel
 
 @using Microsoft.Extensions.Configuration
