A bit of cleanup

--- a/Purchasing.Mvc/Views/Shared/_CssBundle.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_CssBundle.cshtml
@@ -7,12 +7,12 @@
       <link rel="stylesheet" href="~/bundles/main.min.css" />
     </environment>
     <environment names="Development">
-      <link rel="stylesheet" href="~/Css/Site.css" />,
-      <link rel="stylesheet" href="~/Css/jquery-ui-1.8.16.caes.css" />,
-      <link rel="stylesheet" href="~/Css/jquery.qtip.min.css" />,
-      <link rel="stylesheet" href="~/Css/jquery.tzCheckbox.css" />,
-      <link rel="stylesheet" href="~/Css/Datatables.css" />,
-      <link rel="stylesheet" href="~/Css/custom.css" />,
+      <link rel="stylesheet" href="~/Css/Site.css" />
+      <link rel="stylesheet" href="~/Css/jquery-ui-1.8.16.caes.css" />
+      <link rel="stylesheet" href="~/Css/jquery.qtip.min.css" />
+      <link rel="stylesheet" href="~/Css/jquery.tzCheckbox.css" />
+      <link rel="stylesheet" href="~/Css/Datatables.css" />
+      <link rel="stylesheet" href="~/Css/custom.css" />
       <link rel="stylesheet" href="~/Css/icons.css" />
     </environment>
     break;
