--- a/Purchasing.Mvc/Views/Order/RerouteAccountManager.cshtml
+++ b/Purchasing.Mvc/Views/Order/RerouteAccountManager.cshtml
@@ -45,7 +45,7 @@
                     <label>Account Manager to Reroute to:</label><span>*</span>
                 </div>
                 <div class="editor-field">                                      
-                    @Html.Select("AccountManagerId", o => o.Options(Model.PurchaserPeeps, x => x.Id, x => x.FullName).Selected("--Select Account Manager--").Class("chzn-select"))                    
+                    @Html.Select("AccountManagerId", o => o.Options(Model.PurchaserPeeps, x => x.Id, x => x.FullName).FirstOption("--Select Account Manager--").Class("chzn-select"))                    
                 </div>
             </li>
             <li>				
