We missed these two when we updated the other links to github.io

--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -134,7 +134,7 @@
 				
                 <div id="browser-warning" style="display:none;">
                     You are currently using a browser that is not supported.  
-                    Please check <a href="http://ucdavis.github.com/Purchasing/system.html">our system requirements page</a> and return to PrePurchasing using one of our recommended browsers.
+                    Please check <a href="https://ucdavis.github.io/Purchasing/system.html">our system requirements page</a> and return to PrePurchasing using one of our recommended browsers.
                 </div>
 
                 @if(!string.IsNullOrWhiteSpace(TempData["ErrorMessage"] as string)){ 
@@ -188,7 +188,7 @@
                 
                 <div id="browsers">
                     
-                    <p>For an updated list of system requirements please view this website <a href="http://ucdavis.github.com/Purchasing/system.html">here</a>.</p>
+                    <p>For an updated list of system requirements please view this website <a href="https://ucdavis.github.io/Purchasing/system.html">here</a>.</p>
 
                 </div>
 
