--- a/Purchasing.Mvc/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_Layout.cshtml
@@ -182,7 +182,7 @@
 				
                 <div id="browser-warning" style="display:none;">
                     You are currently using a browser that is not supported.  
-                    Please check <a href="http://ucdavis.github.com/Purchasing/system.html">our system requirements page</a> and return to PrePurchasing using one of our recommended browsers.
+                    Please check <a href="https://ucdavis.github.io/Purchasing/system.html">our system requirements page</a> and return to PrePurchasing using one of our recommended browsers.
                 </div>
 
 			    @if (!string.IsNullOrWhiteSpace(TempData["ErrorMessage"] as string))
