--- a/Purchasing.Mvc/Views/User/EmailPreferences.cshtml
+++ b/Purchasing.Mvc/Views/User/EmailPreferences.cshtml
@@ -8,7 +8,7 @@
 @section SubNav
 {
     <ul class="navigation">
-        <li>@Html.ActionLink("Back to Profile", "Profile", null,null, new {@class="button"})</li>
+        <li>@Html.ActionLink("Back to Profile", "Profile", new {}, new {@class="button"})</li>
     </ul>
 }
 
