Ensure correct ActionLink route and attribute args

--- a/Purchasing.Mvc/Views/Admin/ValidateChildWorkgroups.cshtml
+++ b/Purchasing.Mvc/Views/Admin/ValidateChildWorkgroups.cshtml
@@ -9,7 +9,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-        <li>@Html.ActionLink("Remove Extra Child Permissions", "RemoveExtraChildPermissions", null, new { @class = "button" })</li>
+        <li>@Html.ActionLink("Remove Extra Child Permissions", "RemoveExtraChildPermissions", new { }, new { @class = "button" })</li>
 	</ul>
 }
 
