--- a/Purchasing.Mvc/Views/Report/Workload.cshtml
+++ b/Purchasing.Mvc/Views/Report/Workload.cshtml
@@ -7,7 +7,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-		<li>@Html.ActionLink("Back to List", "Index", "Report", new { @class = "button" })</li>
+		<li>@Html.ActionLink("Back to List", "Index", "Report", new { }, new { @class = "button" })</li>
 	</ul>
 }
 
