--- a/Purchasing.Mvc/Views/User/ColumnPreferences.cshtml
+++ b/Purchasing.Mvc/Views/User/ColumnPreferences.cshtml
@@ -8,9 +8,9 @@
 @section SubNav
 {
     <ul class="navigation">
-        <li>@Html.ActionLink("Back to Profile", "Profile", null, new { @class = "button" })</li>
+        <li>@Html.ActionLink("Back to Profile", "Profile", new { }, new { @class = "button" })</li>
         @if(@ViewBag.FromList){
-        <li>@Html.ActionLink("Back to Order List", "Index", "Order", null, new { @class = "button" })</li> 
+        <li>@Html.ActionLink("Back to Order List", "Index", "Order", new { }, new { @class = "button" })</li> 
         }
     </ul>
 }
