--- a/Purchasing.Mvc/Views/Admin/ModifySscAdmin.cshtml
+++ b/Purchasing.Mvc/Views/Admin/ModifySscAdmin.cshtml
@@ -8,7 +8,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-		<li>@Html.ActionLink("Back to List", "Index", "Admin", new { @class = "button" })</li>
+		<li>@Html.ActionLink("Back to List", "Index", "Admin", new { }, new { @class = "button" })</li>
 	</ul>
 }
 
