--- a/Purchasing.Mvc/Views/Organization/Details.cshtml
+++ b/Purchasing.Mvc/Views/Organization/Details.cshtml
@@ -7,7 +7,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-	<li>@Html.ActionLink("Back to List", "Index", null, new { @class = "button" })</li>
+	<li>@Html.ActionLink("Back to List", "Index", new { }, new { @class = "button" })</li>
 	</ul>
 }
 
