--- a/Purchasing.Mvc/Views/Report/Permissions.cshtml
+++ b/Purchasing.Mvc/Views/Report/Permissions.cshtml
@@ -9,7 +9,7 @@
 @section SubNav
 {
 	<ul class="navigation">
-        <li>@Html.ActionLink("Back to List", "Index", "Report", null, new { @class = "button" })</li>
+        <li>@Html.ActionLink("Back to List", "Index", "Report", new { }, new { @class = "button" })</li>
         <li>@Html.ActionLink(Model.HideInherited ? "Show All":"Hide Inherited", "Permissions", "Report", new { hideInherited = !Model.HideInherited } , new { @class = "button" })</li>
 	</ul>
 }
