--- a/Purchasing.Mvc/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/WhoHasAccessToWorkgroup.cshtml
@@ -12,7 +12,7 @@
 {
 	<ul class="navigation">
 		<li>@Html.ActionLink("Details", "Details", new { id = @Model.Workgroup.Id }, new { @class = "button" })</li>
-		<li>@Html.ActionLink("Back to List", "Index", "Edit", new { @class = "button" })</li>
+		<li>@Html.ActionLink("Back to List", "Index", "Edit", new { }, new { @class = "button" })</li>
 	</ul>
 }
 
