--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -189,7 +189,7 @@
 			<h2>Aggie Enterprise Announcement!</h2>
 			
 			<p>
-			  PrePurchasing has been approved as a "critical" boundary application in the grand Aggie Enterprise financial system transition project.
+			  PrePurchasing has been approved as a "critical" boundary application in the grand <a href="https://financeandbusiness.ucdavis.edu/aggie-enterprise/system" target="_blank">Aggie Enterprise financial system</a> transition project.
 			</p>
 			<p>
 			  While there are still many unknowns, we are committed to updating PrePurchasing to work with Aggie Enterprise from day 1 (July 2023).  
