Sort the last action date too

--- a/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Mvc/Views/History/_OrdersTable.cshtml
@@ -238,7 +238,7 @@
 	        }
 	        else
 	        {
-	            result.Append("<td>" + String.Format("{0:d}", item.LastActionDate) + "</td>");
+	            result.Append("<td>" + "<span style=\"display:none;\">" + item.LastActionDate.Ticks + "</span>" + String.Format("{0:d}", item.LastActionDate) + "</td>");
 	        }
 	    }
 	
