Return ViewResult for auth filter failures

--- a/Purchasing.Mvc/Views/Error/NotAuthorized.cshtml
+++ b/Purchasing.Mvc/Views/Error/NotAuthorized.cshtml
@@ -1,6 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Not Authorized";
+  ViewBag.Title = "Not Authorized";
 }
 
-<h2>You are not authorized to view that.</h2>
-
+@* The default error message is not necessary if the error message banner is displayed. *@
+@if (!TempData.ContainsKey("ErrorMessage"))
+{
+  <h2>You are not authorized to view that.</h2>
+}
