Remove trailing commas

--- a/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
@@ -78,10 +78,10 @@
       <script src="~/bundles/orderreview.min.js"></script>
     </environment>
     <environment names="Development">
-      <script src="~/Scripts/public/single/fileuploader.js"></script>,
-      <script src="~/Scripts/public/single/OrderReview.js"></script>,
-      <script src="~/Scripts/public/single/jquery.tmpl.min.js"></script>,
-      <script src="~/Scripts/public/single/SausageCustom.js"></script>,
+      <script src="~/Scripts/public/single/fileuploader.js"></script>
+      <script src="~/Scripts/public/single/OrderReview.js"></script>
+      <script src="~/Scripts/public/single/jquery.tmpl.min.js"></script>
+      <script src="~/Scripts/public/single/SausageCustom.js"></script>
       <script src="~/Scripts/public/single/jquery.stickyfloat.js"></script>
     </environment>
     break;
