Remove trailing commas

--- a/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_JsBundle.cshtml
@@ -139,7 +139,7 @@
       <script src="~/bundles/bootstrap.min.js"></script>
     </environment>
     <environment names="Development">
-      <script src="~/Scripts/bootstrap.js"></script>,
+      <script src="~/Scripts/bootstrap.js"></script>
       <script src="~/Scripts/respond.js"></script>
     </environment>
     break;
