--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -200,6 +200,7 @@
 			  As Aggie Enterprise testing progresses, we will update this space with a detailed roadmap, announcements, and requests for your comments.
 				With large changes in account format, organizational structure, and procurement metadata, it's safe to anticipate that major changes will be required, though we expect most functionality should remain the same and changes will be thoroughly and widely discussed before being implemented.
 			</p>
+            <p>The first of many changes to support Aggie Enterprise have started rolling out.</p>
 		</div>
                 
                 
