--- a/Purchasing.Mvc/Views/Home/Index.cshtml
+++ b/Purchasing.Mvc/Views/Home/Index.cshtml
@@ -200,7 +200,7 @@
 			  As Aggie Enterprise testing progresses, we will update this space with a detailed roadmap, announcements, and requests for your comments.
 				With large changes in account format, organizational structure, and procurement metadata, it's safe to anticipate that major changes will be required, though we expect most functionality should remain the same and changes will be thoroughly and widely discussed before being implemented.
 			</p>
-            <p><a href="https://computing.caes.ucdavis.edu/documentation/purchasing/Aggie-Enterprise-Updates" target="_blank">Aggie Enterprise changes can be found here.</a></p>
+                    <p><a href="https://computing.caes.ucdavis.edu/documentation/purchasing/Aggie-Enterprise-Updates" target="_blank">Click here to see our Aggie Enterprise Updates and Planned Changes.</a></p>
 		</div>
                 
                 
