Show more info for AE

--- a/Purchasing.Mvc/Views/Order/_ReviewAe.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewAe.cshtml
@@ -20,6 +20,12 @@
                     <ul>
                         @*<li><span>PO #:</span><strong id="kfs-ponum"></strong></li>*@
                         <li><span>Status: </span><strong id="ae-request-status"></strong></li>
+                        <li><span>Tracking Id: </span><strong id="ae-request-tracking"></strong></li>
+                        <li><span>Reference: </span><strong id="ae-request-reference"></strong></li>
+                        <li><span>Notes: </span><strong id="ae-request-notes"></strong></li>
+                        <li><span>Requested: </span><strong id="ae-request-requested"></strong></li>
+                        <li><span>Last Update: </span><strong id="ae-request-updated"></strong></li>
+                        <li><span>Processed Date: </span><strong id="ae-request-processed"></strong></li>
                     </ul>
                 </div>
                 <div id="ae-loading" class="section-contents">
