--- a/Purchasing.Mvc/Views/System/Index.cshtml
+++ b/Purchasing.Mvc/Views/System/Index.cshtml
@@ -8,3 +8,7 @@
     <li>@Html.ActionLink("View Index Information", "Indexes")</li>
     <li>@Html.ActionLink("Backup Logs", "Backups")</li>
 </ul>
+
+<form method="post" asp-controller="System" asp-action="UpdateCategories" style="margin-top: 10px;">
+    <input type="submit" value="Update Aggie Enterprise Commodities" class="button"/>
+</form>
