--- a/Purchasing.Mvc/Views/System/Index.cshtml
+++ b/Purchasing.Mvc/Views/System/Index.cshtml
@@ -12,3 +12,8 @@
 <form method="post" asp-controller="System" asp-action="UpdateCategories" style="margin-top: 10px;">
     <input type="submit" value="Update Aggie Enterprise Commodities" class="button"/>
 </form>
+
+<form method="post" asp-controller="System" asp-action="UpdateUnitOfMeasures" style="margin-top: 10px;">
+    <input type="submit" value="Replace All Unit Of Measures" class="button" />
+</form>
+
