--- a/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
@@ -27,7 +27,7 @@
                         @*@Html.Select("WorkgroupVendor.VendorId", o => o.Options(Model.Vendors, x => x.Id, x => x.Name).FirstOption("--Select Vendor--").Selected(Model.WorkgroupVendor.VendorId))*@
 
                         <input type="text" id="VendorSearch"/>
-                        @Html.Hidden("WorkgroupVendor.VendorId")
+                        @Html.Hidden("WorkgroupVendor.AeSupplierNumber")
 
                         @Html.ValidationMessageFor(a => a.WorkgroupVendor.VendorId)
                         <span id="loader-image" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
@@ -37,8 +37,8 @@
                 <li>
                     <div class="editor-label">@Html.LabelFor(a => a.WorkgroupVendor.VendorAddressTypeCode)</div>
                     <div class="editor-field">
-                        @Html.Select("WorkgroupVendor.VendorAddressTypeCode", o => o.FirstOption("--Select Address--").Options(Model.VendorAddresses).Selected(Model.WorkgroupVendor.VendorAddressTypeCode).Disabled(true))
-                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.VendorAddressTypeCode)
+                        @Html.Select("WorkgroupVendor.AeSupplierSiteCode", o => o.FirstOption("--Select Address--").Options(Model.VendorAddresses).Selected(Model.WorkgroupVendor.AeSupplierSiteCode).Disabled(true))
+                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.AeSupplierSiteCode)
                     </div>
                 </li>
 
@@ -85,7 +85,8 @@
             select: function (event, ui) {
 
                 // set the selected vendor
-                $("#WorkgroupVendor_VendorId").val(ui.item.value);
+                //$("#WorkgroupVendor_VendorId").val(ui.item.value);
+                $("#WorkgroupVendor_AeSupplierNumber").val(ui.item.value);
 
                 // display the vendor's name
                 $(this).val(ui.item.label);
@@ -107,22 +108,22 @@
         $.getJSON(vendorAddressUrl, { vendorId: vendorId }, function (results) {
            
             // clear the current options
-            $("#WorkgroupVendor_VendorAddressTypeCode option:not(:first)").remove();
+            $("#WorkgroupVendor_AeSupplierSiteCode option:not(:first)").remove();
 
-            var select = $("#WorkgroupVendor_VendorAddressTypeCode");
+            var select = $("#WorkgroupVendor_AeSupplierSiteCode");
 
             if (results.length > 0) {
                 
                 var data = $.map(results, function (n, i) { return { id: n.Id, name: n.Name }; });
 
-                $.tmpl($("#select-option-template"), data).appendTo("#WorkgroupVendor_VendorAddressTypeCode");
+                $.tmpl($("#select-option-template"), data).appendTo("#WorkgroupVendor_AeSupplierSiteCode");
                
                 // activate control
                 select.removeAttr("disabled");
             }
             else {
                 // deactivate select
-                select.attr("disabled", "disabled");
+                select.prop("disabled", true);
             }
 
         });
