--- a/Purchasing.Mvc/Views/Workgroup/CreateVendor.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/CreateVendor.cshtml
@@ -43,7 +43,7 @@
                             $addressSelect.removeAttr("disabled");
 
                         } else {
-                            $addressSelect.prop("disabled", true);
+                            $addressSelect.attr("disabled", "disabled"); //Doesn't seem to work
                         }
                     });
                 }
