--- a/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
@@ -123,7 +123,7 @@
             }
             else {
                 // deactivate select
-                select.prop("disabled", true);
+                select.attr("disabled", "disabled"); //Doesn't seem to work
             }
 
         });
