Show the type of vendor.

--- a/Purchasing.Mvc/Views/Workgroup/VendorList.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/VendorList.cshtml
@@ -42,7 +42,7 @@
 			<th>
 				CountryCode
 			</th>
-            <th>Kfs Vendor</th>
+            <th>Type</th>
 
 			<th></th>
 
@@ -51,9 +51,16 @@
 	<tbody>
 @{ var odd = false; }
 @foreach (var item in Model) {
+        var itemType = "Generic";
+        if(!string.IsNullOrWhiteSpace(item.AeSupplierNumber)){
+            itemType = "Aggie Enterprise";
+		}
+        else if(!string.IsNullOrWhiteSpace(item.VendorId)){
+            itemType = "KFS";
+		}
 		<tr class="@(odd ? "odd": "even")">
 			<td>
-                @if (string.IsNullOrWhiteSpace(item.VendorId) && string.IsNullOrWhiteSpace(item.VendorAddressTypeCode))
+                @if (string.IsNullOrWhiteSpace(item.VendorId) && string.IsNullOrWhiteSpace(item.VendorAddressTypeCode) && string.IsNullOrWhiteSpace(item.AeSupplierNumber) && string.IsNullOrWhiteSpace(item.AeSupplierSiteCode) )
                 {
 				<a href='@Url.Action("EditWorkgroupVendor", new { id = item.Workgroup.Id, workgroupVendorId = item.Id })' class="ui-icon ui-icon-pencil">
 				</a>                    
@@ -84,7 +91,7 @@
 				@item.CountryCode
 			</td>
             <td>
-                @(string.IsNullOrWhiteSpace(item.VendorId) && string.IsNullOrWhiteSpace(item.VendorAddressTypeCode) ? "No" : "Yes")
+                @itemType
             </td>
 			<td>
 				<a href='@Url.Action("DeleteWorkgroupVendor", new { id = item.Workgroup.Id, workgroupVendorId = item.Id })' class="ui-icon ui-icon-trash">
