--- a/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
@@ -29,7 +29,7 @@
                         <input type="text" id="VendorSearch"/>
                         @Html.Hidden("WorkgroupVendor.AeSupplierNumber")
 
-                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.VendorId)
+                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.AeSupplierNumber)
                         <span id="loader-image" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
 				    </div>
 			    </li>
