--- a/Purchasing.Mvc/Views/Wizard/AddKfsVendor.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/AddKfsVendor.cshtml
@@ -28,23 +28,23 @@
     @Html.Hidden("WorkgroupVendor.Workgroup", Model.WorkgroupVendor.Workgroup.Id)
      @await Html.PartialAsync("_Navigation")
     <section class="ui-corner-all">
-	    <header class="ui-corner-top ui-widget-header">Kfs Vendor <a href="#" id="help-kfsvendor-page" class="ui-icon ui-icon-help showTip" title="@helpText" ></a></header>
+	    <header class="ui-corner-top ui-widget-header">Campus Vendor <a href="#" id="help-kfsvendor-page" class="ui-icon ui-icon-help showTip" title="@helpText" ></a></header>
         
 		    <div class="section-text">
-			    <p>Selecting from the below drop downs will associate this vendor with KFS records and will automatically associate orders with KFS vendors when submitted to KFS.</p>
+			    <p>Selecting from the below drop downs will associate this vendor with Aggie Enterprise records and will automatically associate orders with campus vendors when submitted to Aggie Enterprise.</p>
 		    </div>
 	    <div class="section-contents">
 
 		    <ul>
 				<li>
-				    <div class="editor-label required">@Html.LabelFor(a => a.WorkgroupVendor.VendorId)</div>
+				    <div class="editor-label required">Campus Vendor</div>
 				    <div class="editor-field required">
                         @*@Html.Select("WorkgroupVendor.VendorId", o => o.Options(Model.Vendors, x => x.Id, x => x.Name).FirstOption("--Select Vendor--").Selected(Model.WorkgroupVendor.VendorId))*@
 
                         <input type="text" id="VendorSearch" class="wide500" />
-                        @Html.Hidden("WorkgroupVendor.VendorId")<span>*</span> 
+                        @Html.Hidden("WorkgroupVendor.AeSupplierNumber")<span>*</span>
 
-                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.VendorId)
+                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.AeSupplierNumber)
                         <span id="loader-image" style="display: none;"><img src='@Url.Image("ajax-loader.gif")'/></span>
 				    </div>
 			    </li>
@@ -52,8 +52,8 @@
                 <li>
                     <div class="editor-label required">@Html.LabelFor(a => a.WorkgroupVendor.VendorAddressTypeCode)</div>
                     <div class="editor-field required wide500">
-                        @Html.Select("WorkgroupVendor.VendorAddressTypeCode", o => o.FirstOption("--Select Address--").Options(Model.VendorAddresses).Selected(Model.WorkgroupVendor.VendorAddressTypeCode).Disabled(true))<span>*</span> 
-                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.VendorAddressTypeCode)
+                        @Html.Select("WorkgroupVendor.AeSupplierSiteCode", o => o.FirstOption("--Select Address--").Options(Model.VendorAddresses).Selected(Model.WorkgroupVendor.AeSupplierSiteCode).Disabled(true))<span>*</span>
+                        @Html.ValidationMessageFor(a => a.WorkgroupVendor.AeSupplierSiteCode)
                     </div>
                 </li>
 
@@ -69,7 +69,7 @@
 
 <script type="text/javascript">
     $(function () {
-        var kfsVendor = '@Model.WorkgroupVendor.VendorId';
+        var kfsVendor = '@Model.WorkgroupVendor.AeSupplierNumber';
         var kfsVendorNameAndId = '@Model.WorkgroupVendor.Name' + ' (' + kfsVendor + ')';
         if (kfsVendor != '') {
             $("#VendorSearch").val(kfsVendorNameAndId);
@@ -98,7 +98,7 @@
 
 
                 // set the selected vendor
-                $("#WorkgroupVendor_VendorId").val(ui.item.value);
+                $("#WorkgroupVendor_AeSupplierNumber").val(ui.item.value);
 
                 // display the vendor's name
                 $(this).val(ui.item.label);
@@ -115,14 +115,14 @@
 
     function searchVendorAddress(vendorId) {
         
-        var vendorAddressUrl = '@Url.Action("GetVendorAddresses", "Workgroup")';
+        var vendorAddressUrl = '@Url.Action("SearchVendorAddress", "WorkgroupVendor")';
 
         $.getJSON(vendorAddressUrl, { vendorId: vendorId }, function (results) {
             
             // clear the current options
-            $("#WorkgroupVendor_VendorAddressTypeCode option:not(:first)").remove();
+            $("#WorkgroupVendor_AeSupplierSiteCode option:not(:first)").remove();
 
-            var select = $("#WorkgroupVendor_VendorAddressTypeCode");
+            var select = $("#WorkgroupVendor_AeSupplierSiteCode");
             
             if (results.length > 0) {
 
