from the order...

--- a/Purchasing.Mvc/Views/Order/_VendorSearchDialog.cshtml
+++ b/Purchasing.Mvc/Views/Order/_VendorSearchDialog.cshtml
@@ -1,4 +1,4 @@
-﻿<div id="search-vendor-dialog" title="Search KFS Vendor">
+﻿<div id="search-vendor-dialog" title="Search Campus Vendor">
     <form id="vendor-search-form">
         <section class="section-contents">
             <div class="section-text">
