--- a/Purchasing.Mvc/Views/Wizard/Vendors.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/Vendors.cshtml
@@ -22,7 +22,7 @@
              <li>
                  <a href="#" id="help-kfsadd" class="ui-icon ui-icon-help showTip" style="margin-bottom: -6px;" title="
                     Using the wizard, vendors can only be added. To edit or remove a vendor, use the admin: workgroup page.</br>
-                    To add existing KFS Vendors to this workgroup, choose the button Select KFS Vendor."></a>
+                    To add existing Campus Vendors to this workgroup, choose the button Select Campus Vendor."></a>
              </li>
              <li>@Html.ActionLink("Select Campus Vendor", "AddKfsVendor", new { id = ViewBag.WorkgroupId }, new { @class="button" })</li>
              <li>
