--- a/Purchasing.Mvc/Views/Workgroup/CreateVendor.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/CreateVendor.cshtml
@@ -110,7 +110,7 @@
     </div>
 
     <ul>
-        <li><input type="radio" name="newVendor" value="false" class="vendorType" @(Model.NewVendor.HasValue && !Model.NewVendor.Value ? @"checked" : string.Empty)/> Existing Kfs Vendor</li>
+        <li><input type="radio" name="newVendor" value="false" class="vendorType" @(Model.NewVendor.HasValue && !Model.NewVendor.Value ? @"checked" : string.Empty)/> Existing Campus Vendor</li>
         <li><input type="radio" name="newVendor" value="true"  class="vendorType" @(Model.NewVendor.HasValue && Model.NewVendor.Value ? @"checked" : string.Empty)/> New Vendor</li>
     </ul>
 
