--- a/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/_ExistingWorkgroupVendor.cshtml
@@ -12,17 +12,17 @@
     @Html.Hidden("WorkgroupVendor.Workgroup", Model.WorkgroupVendor.Workgroup.Id)
     
     <section class="ui-corner-all">
-	    <header class="ui-corner-top ui-widget-header">Kfs Vendor</header>
+	    <header class="ui-corner-top ui-widget-header">Campus Vendor</header>
         
 
 		    <div class="section-text">
-			    <p>Selecting from the below drop downs will associate this vendor with KFS records and will automatically associate orders with KFS vendors when submitted to KFS.</p>
+			    <p>Selecting from the below drop downs will associate this vendor with Campus records and will automatically associate orders with Campus vendors when submitted to Aggie Enterprise.</p>
 		    </div>
 
 	    <div class="section-contents">
 		    <ul>
 				<li>
-				    <div class="editor-label">@Html.LabelFor(a => a.WorkgroupVendor.VendorId)</div>
+                    <div class="editor-label">@Html.LabelFor(a => a.WorkgroupVendor.AeSupplierNumber)</div>
 				    <div class="editor-field">
                         @*@Html.Select("WorkgroupVendor.VendorId", o => o.Options(Model.Vendors, x => x.Id, x => x.Name).FirstOption("--Select Vendor--").Selected(Model.WorkgroupVendor.VendorId))*@
 
