show country code

--- a/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Mvc/Views/Order/_ReviewOrderDetails.cshtml
@@ -150,6 +150,7 @@
                                 <span class="locality">@Model.Vendor.City</span>
                                 <span class="region" title="State">@Model.Vendor.State</span>
                                 <span class="postal-code">@Model.Vendor.Zip</span>
+                                <span class="country-code">@Model.Vendor.CountryCode</span>
                             </div>
                             @if (!string.IsNullOrWhiteSpace(Model.Vendor.Phone) || !string.IsNullOrWhiteSpace(Model.Vendor.Fax))
                             {
